--- a/src/app/devices/devicetemplates.component.scss
+++ b/src/app/devices/devicetemplates.component.scss
@@ -8,6 +8,7 @@ $black-text: #303132;
   }
   md-card {
     background-color: white;
+    box-shadow: none;
     .card-header {
       h2 {
         margin: 0;
