--- a/src/app/devices/newtemplate.component.scss
+++ b/src/app/devices/newtemplate.component.scss
@@ -2,6 +2,7 @@
   md-card {
     h2 {
       display: inline;
+      font-family: "Avenir-Med", sans-serif;
     }
     hr {
       margin-top: 30px;
