--- a/src/app/tree/tree.component.scss
+++ b/src/app/tree/tree.component.scss
@@ -1,6 +1,6 @@
 $dashboard-toolbar-color: #e4f2fb;
 $background-color: #aad1e2;
-$side-nav-color: #f9f9f9;
+$side-nav-color: #dbe2e4;
 $side-nav-width: 240px;
 $button-height: 40px;
 $hover-color: #ffffff;
